--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+bottle = "^0.12.19"
 
 [tool.poetry.dev-dependencies]
+autopep8 = "^1.5.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
